--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -197,6 +197,8 @@
 
 \newcommand{\reftypes}{\mathsf{Ref}}
 
+\newcommand{\relatable}[3]{#2 \sim_{#1} #3}
+
 \newcommand{\relinvs}[2]{\mathsf{ExpsInvs}[ #1, #2 ]}
 
 \newcommand{\relpreds}{\mathsf{Preds}}
@@ -284,6 +286,8 @@
 \newcommand{\typosfields}{F_T}
 
 \newcommand{\typos}{P_T}
+
+\newcommand{\typosty}[1]{P_{#1}}
 
 \newcommand{\openpos}[1]{O_T^{#1}}
 
