--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -185,7 +185,7 @@
 
 \newcommand{\pos}[1]{p_{#1}}
 
-\newcommand{\posexps}{\mathsf{Exps}}
+\newcommand{\posexps}{E_P}
 
 \newcommand{\posreltypes}{T_R^{X \union \exppos}}
 
@@ -194,6 +194,8 @@
 \newcommand{\progders}[1]{\mathsf{Ders}[ #1 ]}
 
 \newcommand{\queryof}[1]{\mathsf{Query}_{#1}}
+
+\newcommand{\refpreds}[1]{\mathsf{Ref}_{#1}}
 
 \newcommand{\reftypes}{\mathsf{Ref}}
 
