--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -303,7 +303,7 @@
 
 \newcommand{\tyvarfield}{X}
 
-\newcommand{\unfold}[2]{#1\uparrow^{#2}}
+\newcommand{\unfold}[1]{#1\uparrow}
 
 \newcommand{\unfoldings}[1]{\mathsf{Unfoldings}[ #1 ]}
 
